--- a/MyYoutubeVideo.html
+++ b/MyYoutubeVideo.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
     <title>My Youtube Video</title>
     <style>
-
+      a{
+        display: block;
+        text-decoration: none;
+        color: #0000ff;
+        background: #ffffff;
+        width: 10vw;
+        height: 10vh;
+      }
     </style>
   </head>
   <body>
